<resources>
    <!-- labels -->
    <string name="app_name">BurnedCaloriesCalculator</string>
    <string name="action_settings">Settings</string>
    <string name="Weight">Weight</string>
    <string name="MilesRan">Miles Ran</string>
    <string name="CaloriesBurned">Calories Burned</string>
    <string name="Height">Height</string>
    <string name="BMI">BMI</string>
    <string name="CaloriesBurnedDefault">0.00</string>
    <string name="Name">Name</string>

    <!-- default values -->
    <string name="BMIDefault">00</string>
    <string name="MilesRanDefault">00mi</string>
    <string name="WeightDefault">0.00</string>
    <string name="NameDefault">Name</string>

    <string-array name="inches">
        <item >0</item>
        <item >1</item>
        <item >2</item>
        <item >3</item>
        <item >4</item>
        <item >5</item>
        <item >6</item>
        <item >7</item>
        <item >8</item>
        <item >9</item>
        <item >10</item>
        <item >11</item>
    </string-array>

    <string-array name="feet">
        <item >3</item>
        <item >4</item>
        <item >5</item>
        <item >6</item>
        <item >7</item>
    </string-array>

</resources>
